fixed top spacing regression

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -198,7 +198,7 @@ code {
 
 header {
   position: relative;
-  height: 713px;
+  height: 763px;
   background: nth($colors, 1);
   color: #FFFFFF;
 
